Fixed Carousel Bugs
Header is centered, no dots on blocks, blocks start in the right place now, no overlap with words

--- a/3appwebsite/css/main.css
+++ b/3appwebsite/css/main.css
@@ -178,6 +178,9 @@ p {
 .toptest {
   max-height: 150%;
   max-width: 150%;
+  transform: translateX(-13vw);
+  margin-top: 12vh;
+  margin-bottom: 5vh;
 }
 
 .body2{
@@ -187,6 +190,14 @@ p {
   height: 100%;
   display: flex;
   align-items: center;
+
+  /*background-image: url('https://i.kym-cdn.com/entries/icons/facebook/000/038/013/cover4.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;/*
+
+  /*background-image: url("../images/swoopbg.png");*/
+
 }
 
 .wrapper {
@@ -195,6 +206,7 @@ p {
   overflow: visible;
   position: absolute;
   float: left;
+  transform: translateX(-26.65vw);
 }
 
 .box1 {
@@ -205,6 +217,7 @@ p {
   width: 25%;
   background-color: #E25CF2;
   transition: 2s;
+  list-style:none;
 }
 
 .box2 {
@@ -212,6 +225,7 @@ p {
   height: 100vh;
   width: 25%;
   background-color: #BF60FB;
+  list-style:none;
 
   transition: 2s;
 }
@@ -221,6 +235,7 @@ p {
   height: 100vh;
   width: 25%;
   background-color: #8C64E6;
+  list-style:none;
 
   transition: 2s;
 }
@@ -230,6 +245,7 @@ p {
   height: 100vh;
   width: 25%;
   background-color: #6065FB;
+  list-style:none;
 
   transition: 2s;
 }
